--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -22,8 +22,27 @@ linter:
   # `// ignore_for_file: name_of_lint` syntax on the line or in the file
   # producing the lint.
   rules:
-    # avoid_print: false  # Uncomment to disable the `avoid_print` rule
+    avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+    always_declare_return_types: true
+    cancel_subscriptions: true
+#      close_sinks: true
+#      combinators_ordering: true
+#      comment_references: true
+#      invalid_case_patterns: true
+#      library_annotations: true
+#      one_member_abstracts: true
+#      only_throw_errors: true
+
+
+analyzer:
+  strong-mode:
+    implicit-casts: false
+    implicit-dynamic: false
+  language:
+    #    strict-casts: true
+    #    strict-inference: true
+    strict-raw-types: true
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
