--- a/lib/.env
+++ b/lib/.env
@@ -1,1 +1,2 @@
-GOOGLE_CLIENT_ID = '251304641663-5i43r0oqa6iu95f4tb3ebg4mhs3o27k9.apps.googleusercontent.com'
+GOOGLE_CLIENT_ID=251304641663-ti4h232vb33f3uk7rhsa1nm5rvrmpbf2.apps.googleusercontent.com
+TYPESENSE_URL=0631-94-62-107-64.ngrok-free.app
