--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,9 @@ dependencies:
   lottie: ^2.6.0
   material_design_icons_flutter: ^7.0.7296
   toggle_switch: ^2.1.0
+  step_progress_indicator: ^1.0.2
+  flutter_animation_progress_bar: ^2.3.1
+  expand_tap_area: ^1.1.1
 #  babstrap_settings_screen: ^0.1.6 # settings screen
 # TODO: ALERTS https://gallery.flutter.dev/#/demo/cupertino-alerts
 
