--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,7 +80,7 @@ dependencies:
   step_progress_indicator: ^1.0.2
   flutter_animation_progress_bar: ^2.3.1
   expand_tap_area: ^1.1.1
-  flutter_native_splash: ^2.3.7
+  another_flutter_splash_screen: ^1.2.0
 #  babstrap_settings_screen: ^0.1.6 # settings screen
 # TODO: ALERTS https://gallery.flutter.dev/#/demo/cupertino-alerts
 
