--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,7 @@ dependencies:
   another_flutter_splash_screen: ^1.2.0
 #  babstrap_settings_screen: ^0.1.6 # settings screen
 # TODO: ALERTS https://gallery.flutter.dev/#/demo/cupertino-alerts
+# TODO: app version: https://pub.dev/packages/package_info_plus
 
 dev_dependencies:
   flutter_test:
