add version check

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.0.1+1
+version: 0.0.2
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
@@ -83,9 +83,9 @@ dependencies:
   flutter_animation_progress_bar: ^2.3.1
   expand_tap_area: ^1.1.1
   another_flutter_splash_screen: ^1.2.0
+  package_info_plus: ^5.0.1
 #  babstrap_settings_screen: ^0.1.6 # settings screen
 # TODO: ALERTS https://gallery.flutter.dev/#/demo/cupertino-alerts
-# package_info_plus 5.0.1 # app info
 # share_plus 7.2.1 # share feature
 # logger 2.0.2+1 # logging
 
