new Add product form, login validation, address search with integration to google maps, improved categories with subcategories(disabled for now), don't dismiss load animation, remove favorites total, change favorites placeholder, prepare location, phone number and name to be added to product model,

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,10 +41,22 @@
 	<true/>
 	<key>NSCameraUsageDescription</key>
 	<string>This app would like to access your camera.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>This app needs access to location when open and in the background.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>This app needs access to location when in the background.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app needs access to location when open.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>This app would like to access your photo library.</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
+	<key>io.flutter.embedded_views_preview</key>
+    <true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
