--- a/lib/.env
+++ b/lib/.env
@@ -1,3 +1,6 @@
 GOOGLE_CLIENT_ID=251304641663-ti4h232vb33f3uk7rhsa1nm5rvrmpbf2.apps.googleusercontent.com
-TYPESENSE_URL=36b0-94-62-107-64.ngrok-free.app
+TYPESENSE_URL=df10-94-62-107-64.ngrok-free.app
 TYPESENSE_API_KEY=fop3IbKjSyiXuwGD6yEXllogVEZxZvJo
+
+MAPS_IOS_API_KEY=AIzaSyDz-InRsIWoZ3WkSFSmnLNqkdBJeMitMjU
+MAPS_ANDROID_API_KEY=AIzaSyB_9z6B0HpEG4z4vD3qP1iEU5M0znJ3ebk
