--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,12 +41,12 @@ dependencies:
   flutter_secure_storage: ^8.0.0
 
   #data storage
-  cloud_firestore: 4.9.1
-  firebase_storage: ^11.2.6
-  firebase_core: ^2.15.1
-  firebase_database: ^10.2.5
+  cloud_firestore: 4.13.6
+  firebase_storage: ^11.5.6
+  firebase_core: ^2.24.2
+  firebase_database: ^10.3.8
   firebase_auth: ^4.9.0
-  image_picker: ^1.0.4
+  image_picker: ^1.0.5
   typesense: ^0.4.0
 
   #state management
@@ -83,14 +83,17 @@ dependencies:
   flutter_animation_progress_bar: ^2.3.1
   expand_tap_area: ^1.1.1
   another_flutter_splash_screen: ^1.2.0
-  package_info_plus: ^5.0.1
+  package_info_plus: ^4.1.0
   photo_view: ^0.14.0
   extended_image: ^8.2.0
   insta_image_viewer: ^1.0.2
+  modal_bottom_sheet: ^3.0.0-pre
+  dots_indicator: ^3.0.0
+  atlas_icons: ^0.0.12
+  google_places_flutter: ^2.0.6
 #  babstrap_settings_screen: ^0.1.6 # settings screen
-# TODO: ALERTS https://gallery.flutter.dev/#/demo/cupertino-alerts
 # share_plus 7.2.1 # share feature
-# logger 2.0.2+1 # logging
+# dotted_border: 2.1.0 # dotted border
 
 dev_dependencies:
   flutter_test:
@@ -124,6 +127,7 @@ flutter:
     - assets/status_image/
     - assets/other_images/
     - assets/icons/
+    - assets/local_json/
     - lib/.env
 
   # An image asset can refer to one or more resolution-specific "variants", see
