--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   firebase_auth: ^4.9.0
   image_picker: ^1.0.5
   typesense: ^0.4.0
+  flutter_image_compress: ^2.0.3
 
   #state management
   bloc: ^8.1.2
