--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   basic_utils: ^5.7.0
   email_validator: ^2.1.17
   flutter_pw_validator: ^1.6.0
+  intl: ^0.19.0
 
   #ui
   oktoast: ^3.3.1
@@ -95,6 +96,7 @@ dependencies:
   adaptive_dialog: ^2.0.0
   babstrap_settings_screen: ^0.1.6
   settings_ui: ^2.0.2 # settings screen
+  image_card: ^0.0.4
 # share_plus 7.2.1 # share feature
 # dotted_border: 2.1.0 # dotted border
 
